--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
         <div class="row h-100">
             <h1 class="text-center bg-primary">DUKI</h1>
             <aside class="col-sm-6 col-md-4 col-xxl-3">
-                <div id="imagen_inicio"><img src="./assets/img/Inicio.jpg" alt="Foto Duki rubio"></div>
+                <div id="imagen_inicio">
+                    <img src="./assets/img/Inicio.jpg" alt="Foto Duki rubio">
+                </div>
             </aside>
             <section class="col-sm-6 col-md-8 col-xxl-9">
                 <article class="container">
