Se agregan las primeras animaciones

--- a/pages/historia.html
+++ b/pages/historia.html
@@ -58,11 +58,13 @@
                         
                         Así es como Duki ha logrado construir una carrera sólida en la industria musical, convirtiéndose en una figura destacada del rap y el trap argentino. Su historia es un ejemplo de cómo el talento y la perseverancia pueden llevar a un artista a alcanzar el éxito en la industria de la música.</p>
                 </article>
+                <article>
                 <div id="contenedor_imagenes">
                     <img src="../assets/img/quinto escalon.jpg" alt="Duki en el quinto escalon">
                     <img src="../assets/img/Dukiii.jpg" alt="Duki blanco y negro">
                     <img src="../assets/img/modo_diablo.jpg" alt="Grupo Modo Diablo">
                 </div>
+                </article>
             </div>
             
         </main>
