--- a/pages/nominaciones.html
+++ b/pages/nominaciones.html
@@ -108,11 +108,13 @@
                     </tr>
                 </tbody>
             </table>
-                <div id="contenedor_imagenes">
-                    <img src="../assets/img/Duki_nominado.jpg" alt="Duki nominado a un premio">
-                    <img src="../assets/img/duki-concierto.jpg" alt="Duki en un recital" >
-                    <img src="../assets/img/duki-el-rey-del-trap-argentino-1439588.jpg" alt="Duki haciendo señas" >
-                </div>
+                <article>
+                    <div id="contenedor_imagenes">
+                        <img src="../assets/img/Duki_nominado.jpg" alt="Duki nominado a un premio">
+                        <img src="../assets/img/duki-concierto.jpg" alt="Duki en un recital" >
+                        <img src="../assets/img/duki-el-rey-del-trap-argentino-1439588.jpg" alt="Duki haciendo señas" >
+                    </div>
+                </article>
             </div>
         </main>
         
