--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Sitio web informativo y fanpage de Duki">
+    <meta name="keywords" content="Duki, trap, rap, hip-hop, musica, musica urbana, fanpage, Mauro Lombardo, modo diablo">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 
     <link rel="shortcut icon" href="./assets/img/favicon-32x32.png">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Duki</title>
+    <title>Duki - Fanpage</title>
 </head>
 <body>
     <header class="container-fluid bg-primary-subtle">
