--- a/pages/discografia.html
+++ b/pages/discografia.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Lista oficial de la discografía del artista Duki">
+    <meta name="keywords" content="Duki, trap, rap, hip-hop, musica, musica urbana, fanpage, Mauro Lombardo, modo diablo, discografia, discos">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 
     <link rel="stylesheet" href="../css/style.css">
     <link rel="shortcut icon" href="../assets/img/favicon-32x32.png">
-    <title>Duki</title>
+    <title>Discografía duki</title>
 </head>
 <body>
     <header class="container-fluid bg-primary-subtle">
