Avances en el responsive de las paginas

--- a/pages/historia.html
+++ b/pages/historia.html
@@ -42,7 +42,7 @@
         </div>
     </header>
     
-        <main class="container-fluid bg-danger">
+        <main class="container-fluid bg-danger historia">
             <div class="row h-100">
                 <h1 class="text-center bg-primary">HISTORIA</h1>
                 <article>
