--- a/pages/nominaciones.html
+++ b/pages/nominaciones.html
@@ -40,7 +40,7 @@
 
         </div>
     </header>
-        <main class="container-fluid bg-danger">
+        <main class="container-fluid bg-danger nominaciones">
             <div class="row h-100">
                 <h1 class="text-center bg-primary">Nominaciones</h1>
             <table border="1" cellpadding="1" cellspacing="1" class=" table-primary table-bordered">
