--- a/pages/nominaciones.html
+++ b/pages/nominaciones.html
@@ -41,7 +41,7 @@
         </div>
     </header>
         <main class="container-fluid bg-danger nominaciones">
-            <div class="row h-100">
+            <div class="row h-100 tabla_contenedor">
                 <h1 class="text-center bg-primary">Nominaciones</h1>
             <table border="1" cellpadding="1" cellspacing="1" class=" table-primary table-bordered">
                 <thead>
